objects/signature__Record_Creation__mdt.object
<CustomObject>
    <description>Record created when a signature is completed.</description>
    <fields>
        <fullName>signature__DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signature__LeadField__c</fullName>
        <label>Lead Field</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signature__Signature_Field__c</fullName>
        <label>Signature Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Record Creation</label>
    <pluralLabel>Record Creations</pluralLabel>
</CustomObject>